12. Kubernetes/yamls/my-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: my-app
        image: docker.io/miteshch/demo-app:nodeApp1.0     
        imagePullPolicy: Always   # to pull image from repository always, instead of using from local machine
        ports:
        - containerPort: 3000
