12. Kubernetes/yamls/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress-tls
spec:
  tls:
  - hosts:
    - dashboard.com
    secretName: dashboard-secret-tls
  rules:  
  - host: dashboard.com
    http:   
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
